@startuml

class HojaCalculo {
  + filas: int
  + columnas: int
  + celdas: Celda[][]
  + navegar(direccion: char): void
  + editar(): void
  + terminar(): void
}

class Celda {
  + contenido: string
  + obtenerContenido(): string
  + establecerContenido(valor: string): void
}

class InterfazUsuario {
  + mostrar(): void
  + capturarEntrada(): char
}

class Teclado {
  + capturarTecla(): char
}

HojaCalculo "1" *-- "N" Celda
HojaCalculo "1" *-- "1" InterfazUsuario
InterfazUsuario "1" *-- "1" Teclado

@enduml
